# MachineLearningFramework

./: .gitignore  requirements.txt  requirements_gpu.txt  setup.cfg
sandbox/: recursively_sharpen_bird.py  sharpen_birds.py
src/austin_heller_repo/: machine_learning_framework.py
src/austin_heller_repo/machine_learning/: common.py  framework.py  service.py
src/austin_heller_repo/machine_learning/dataset/: dataset.py
src/austin_heller_repo/machine_learning/dataset/kaggle/: gpiosenka_100_bird_species_sharpen_dataset.py  kaggle_dataset.py  nabeel965_handwritten_words_dataset.py
src/austin_heller_repo/machine_learning/dataset/sklearn/: iris_dataset.py
src/austin_heller_repo/machine_learning/implementation/: tensor_cache_module_service.py  tensor_cache_module_service_structure.py  yolov5_service_structure.py
src/machine_learning_framework_austinhellerrepo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: common_test.py  dataset_test.py  framework_test.py  sandbox.py  service_test.py  tensor_cache_test.py
test/resources/fonts/dark_academia/: readme.txt
test/resources/fonts/ramp/: readme.txt
