[metadata]
name = machine-learning-framework-austinhellerrepo
version = 0.0.1
author = Austin Heller
description = A package that contains general machine learning modules
url = https://github.com/AustinHellerRepo/MachineLearningFramework
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operation System :: OS Independent

[easy_install]
find_links = https://download.pytorch.org/whl/torch_stable.html

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8
install_requires =
  common-austinhellerrepo@git+https://github.com/AustinHellerRepo/Common
  threading-austinhellerrepo@git+https://github.com/AustinHellerRepo/Threading
  socket-queued-message-framework@git+https://github.com/AustinHellerRepo/SocketQueuedMessageFramework
  Pillow
  torch
  torchaudio
  torchvision
  kaggle
  gitpython

[options.packages.find]
where = src
